--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "framer-motion": "^12.23.25",
     "movie-trailer": "^3.2.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.10.1",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
